Illustrations also set to Yellow theme

--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -153,7 +153,7 @@
     <!---1-->
     <div class=" col-md-6">
       <div class="card__header">
-        <img  src="./assets/CodeIN.jpg" alt="card__image" class="card__image">
+        <img  src="./assets/CodeIN-yellow.png" alt="card__image" class="card__image">
       </div>
       <div class="card__body">
         <h4>   Open Source Website for CodeIN Community built using HTML, CSS, JavaScript and Bootstrap</h4>
@@ -234,7 +234,7 @@
                   Join
 
                   Now</i></a>
-                <a href="#about" class="btn btn-outline-danger btn-common video-popup">
+                <a href="#about" class="btn btn-outline-warning btn-common video-popup">
                   <img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
                   More</i></a>
               </div>
@@ -247,7 +247,7 @@
           </div>
           <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
             <div class="intro-img">
-              <img class="img-fluid" src="assets/img/intro-mobile.webp" alt="Introduction mobile picture">
+              <img class="img-fluid" src="assets/img/Marketing-pana.png" alt="Introduction mobile picture">
             </div>
           </div>
         </div>
