--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					</div>
 					<div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
 						<div class="intro-img">
-							<img class="img-fluid" src="assets/img/intro-mobile.webp" alt="Introduction mobile picture">
+							<img class="img-fluid" src="assets/img/Marketing-pana.png" alt="Introduction mobile picture">
 						</div>
 					</div>
 				</div>
@@ -322,7 +322,7 @@
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
-					<img class="img-fluid" src="assets/img/about/img-1.webp" alt="Benefits page mobile picture">
+					<img class="img-fluid" src="assets/img/about/Social biography-amico.png" alt="Benefits page mobile picture">
 				</div>
 			</div>
 		</div>
