Added the video section :w :q :wq i

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<!-- Main Style -->
 	<link rel="stylesheet" href="assets/css/blog.css">
+	<link rel="stylesheet" href="assets/css/video.css">
 	<link rel="stylesheet" href="assets/css/oppurtunity.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 
@@ -1246,6 +1247,43 @@
 	</button>
 	<br><br>
 	<!-- Blog Section End-->
+
+	<!-- Video section Starts -->
+	<section id="video" class="section-padding">
+		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
+			<h3 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Videos</h3>
+			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+		</div>
+		<br>
+		
+		<div class="container">
+			<div class="d-flex justify-content-center">
+
+				<div class="vid col-md-6 flex-md-column">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe width="500" height="315" src="https://www.youtube.com/embed/wAXtssM42Ao?rel=0&controls=0&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="vid col-md-4 flex-md-column">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe width="500" height="315" src="https://www.youtube.com/embed/ricDQbQ_mYc?rel=0&controls=0&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="vid col-md-6 flex-md-column">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe width="500" height="315" src="https://www.youtube.com/embed/yXXP3n9_CiA?rel=0&controls=0&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
+		<button class="btn btn-common opportunity_btn"><a href="https://www.youtube.com/c/SauravMukherjee44/videos" target="_blank">See more videos <i class="fa fa-caret-right" aria-hidden="true"></i></a>
+		</button>
+		  
+	</section>
+
+	  <!-- Video Section End -->
 
 	 <!-- Testimonial Section Start -->
 	 <section id="testimonial1" class="testimonial-community section-padding">
