hrithik raj added testimonial

--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,18 @@
 						  </div>
 						</div>
 					  </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="img-thumb">
+  
+                <img src="./assets/img/team/hrithik_raj.jpeg" alt="Hrithik Raj">
+                </div>
+                <div class="info">
+                <h2>Hrithik Raj
+                </h2>
+                <h3>Looking back I never knew I'd know so much about open source. CodeIN community have provided me that platform to explore open source I never could have imagined. Feels great to be a part of such a movement.</h3>
+                </div>
+              </div>
 					  <div class="swiper-slide">
 						<div class="testimonial-item">
 						  <div class="img-thumb">
