--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
 									<div class="swiper-slide">
 										<div class="testimonial-item">
 											<div class="img-thumb">
-												<img src="./assets/img/team/shalini.webp" alt="Team members">
+												<img src="./assets/img/team/shalini.jpeg" alt="Team members">
 											</div>
 											<div class="info">
 												<h2 class="text-dark">Shalini Singh </h2>
