for better ui of page

--- a/blog.html
+++ b/blog.html
@@ -126,9 +126,9 @@
     <div class="col-md-1"></div>
 
     <div class="col-md-3">
-      <div style="float: left;margin-right: 5%;">
-        <input style="border-radius: 4rem; padding: 15px;border-color: grey;width: 135%;" id="searchbar"
-          onkeyup="search_blog()" type="text" name="search" placeholder='Search blogs.....' />
+      <div style="float: left;margin-right: 6%;">
+        <input style="border-radius: 4rem; padding: 15px;border-color: grey;width: 130%;" id="searchbar"
+          onkeyup="search_blog()" type="text" name="search" placeholder='Search blogs....' />
       </div>
     </div>
   </div>
@@ -159,7 +159,7 @@
           IoT has been racing ahead in the technological race, thinning the gap between the physical world and the
           digital world
         </div>
-        <a href="https://simpleprogrammer.com/iot-influence-industry/" class="read_btn" data-aos="fade-up">Go to blog</a>
+        <a href="https://simpleprogrammer.com/iot-influence-industry/" class="read_btn" data-aos="fade-up">Go to Blogs</a>
       </div>
     </div>
 
