--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -84,7 +84,7 @@
 							</a>
 						</li>
 						
-						<li class="nav-item">
+						<li class="nav-item mr-5">
 							<a class="nav-link" href="/#opportunity">
 								Opportunity
 							</a>
@@ -203,11 +203,12 @@
     <br>
     <div class="text-center mt-2">
       <div class="description">
-        <h5>🏆 Follow our YouTube Tutorial to know all steps to Rock HacktoberFest 2022! 🥳</h5>
+        <h5 style="  font-size: 1.75rem; color: #222222;" class="my-5">
+          🏆 Follow our YouTube Tutorial to know all steps to Rock HacktoberFest 2022! 🥳</h5>
       </div>
       <div class="d-flex align-items-center justify-content-center">
-        <a href=" https://youtu.be/wAXtssM42Ao" class="read_btn" data-aos="fade-up">Watch On YouTube</a> 
-        <a href=" https://hacktoberfest.com/" class="read_btn" data-aos="fade-up">HacktoberFest Website</a>
+        <a href=" https://youtu.be/wAXtssM42Ao" class="read_btn py-3" data-aos="fade-up">Watch On YouTube</a> 
+        <a href=" https://hacktoberfest.com/" class="read_btn ml-4 py-3" data-aos="fade-up">HacktoberFest Website</a>
       </div>
     </div>
   </div>
@@ -229,13 +230,13 @@
 
               <div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
-                <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
-                  <img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
+                <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common" style="padding-top: 1.15rem; padding-bottom: 1.15rem;">
+                  <i class="fab fa-discord " style="margin-right: 10px; font-size: 2rem;"></i>
                   Join
 
                   Now</i></a>
-                <a href="#about" class="btn btn-outline-danger btn-common video-popup">
-                  <img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
+                  <a href="#about" class="btn btn-outline-danger btn-common video-popup" style="padding-top: 1.15rem; padding-bottom: 1.15rem;">
+                    <i class="fa fa-graduation-cap" style="margin-right: 10px; font-size: 2rem;"></i>Learn
                   More</i></a>
               </div>
 
