added search icon for search projects

--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -135,6 +135,7 @@
       <div style="float: left;margin-right: 5%;" class="searchbar_div">
         <input style="border-radius: 3rem; padding: 10px;border-color: grey;width: 130%;" id="searchbar"
           onkeyup="search_blog()" type="text" name="search" placeholder='Search projects.....' />
+          <button  style="border-radius: 3rem;" type="submit"><i class="fa fa-search"></i></button>
       </div>
     </div>
   </div>
