--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
 						</li>
 
 						<li class="nav-item"  class="COLORFILL">
-							<a class="nav-link btn btn-outline-danger rounded px-3" href="#joinus">
+							<a class="btn btn-border" href="#joinus">
 								Join Us
 							</a>
 						</li>
 						<li class="nav-item" class="COLORFILL">
-							<a class="nav-link btn btn-outline-danger rounded px-3" target="_blank" href="./hacktoberfest2022.html">
+							<a class="btn btn-border btn-common" target="_blank" href="./hacktoberfest2022.html">
 
 								HacktoberFest 2022
 							</a>
