social share button feature in Hacktoberfest2022.html page
I have added a social share button feature to the hacktoberfest2022.html page for sharing the project for contribution.

--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -45,6 +45,11 @@
   <!-- animate on scroll import -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- animate on scroll import end -->
+
+<!-- 	social share button libbrary -->
+	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=633966155a306f001995dacc&product=sop' async='async'></script>
+<!-- 	social share button libbrary -->
+	
 </head>
 
 <body>
@@ -145,7 +150,9 @@
 
   </div>
 
- 
+<!-- social share button code  -->
+	<!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
+<!-- social share button code  -->
 
   <div class="container mt-5">
 
