--- a/opportunity.html
+++ b/opportunity.html
@@ -69,7 +69,7 @@
                                 Events
                             </a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item active opportunity">
                             <a class="nav-link" href="./opportunity.html">
                                 Opportunity
                             </a>
