Changes in Hacktoberfest page

--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -245,7 +245,7 @@
                   <!-- <a href="#about" class="btn btn-outline-warning btn-common video-popup" style="padding-top: 1.15rem; padding-bottom: 1.15rem;">
                     <i class="fa fa-graduation-cap" style="margin-right: 10px; font-size: 2rem;"></i>Learn
                   More</i></a> -->
-                  <a href="/#about" target="_blank" class="btn btn-common" style="padding-top: 1.15rem; padding-bottom: 1.15rem;">
+                  <a href="#about" target="_blank" class="btn btn-common" style="padding-top: 1.15rem; padding-bottom: 1.15rem;">
                     <i class="fa fa-graduation-cap" style="margin-right: 10px; font-size: 2rem;"></i>
                     Learn
   
