--- a/benefit.html
+++ b/benefit.html
@@ -133,7 +133,7 @@
 
 
     <div class="icon">
-        <img src="./assets/img/about/img-1.png" alt="benefit">
+        <img src="./assets/img/about/Social biography-amico.png" alt="benefit">
     </div>
     <div class = "page-header">
   <h2 class="heading">Benefits of Joining Us</h2>
@@ -215,9 +215,9 @@
 <br>
 <br>  
 
-<a href="https://codeincommunity.bio.link/"><button type="button" class="btn pmd-btn-fab btn-danger pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
+<a href="https://codeincommunity.bio.link/"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
 <br>
-<a href="https://codeincommunity.tech/#joinus"><button type="button" class="btn pmd-btn-fab btn-danger pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join our organising Team</button></a><br>
+<a href="https://codeincommunity.tech/#joinus"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join our organising Team</button></a><br>
 <br>
   
   </div>
