Fixed About Section
 For better readability and presentation

--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
 					<div class="about-wrapper wow fadeInLeft" data-wow-delay="0.3s">
 						<div>
 							<div class="site-heading" data-aos="fade-left" data-aos-duration="1500">
-								<p class="mb-3">Explore opportunities!</p>
 								<h2 class="section-title com">What We offer through the Community</h2>
 							</div>
 							<div class="content" data-aos="fade-up" data-aos-duration="1500">
+								<h3 class="section-title">Explore opportunities through:</h3>
 								<ul class="section-feature">
 									<li>&#x25BA;&nbsp; MENTOR'S GUIDE & SUPPORT</li>
 									<li>&#x25BA;&nbsp; HELP EVERYONE TO LEARN & GROW</li>
