--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 								<h2 class="section-title com">What We offer through the Community</h2>
 							</div>
 							<div class="content" data-aos="fade-up" data-aos-duration="1500">
-								<h3 class="section-title">Explore opportunities through:</h3>
+								<h5 class="section-title com">Explore opportunities through:</h5>
 								<ul class="section-feature">
 									<li>&#x25BA;&nbsp; MENTOR'S GUIDE & SUPPORT</li>
 									<li>&#x25BA;&nbsp; HELP EVERYONE TO LEARN & GROW</li>
