--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -169,7 +169,7 @@
         <p> So, here you go! Contribute to the Open Source Website of CodeIN Community 🤩 Excited?</p>
       </div>
     <div class="card__footer text-center">
-        <a href="https://simpleprogrammer.com/myths-about-software-programming/https://github.com/SauravMukherjee44/CodeIN-Community-Website" class="read_btn" data-aos="fade-up">Go to Project</a>
+        <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" class="read_btn" data-aos="fade-up">Go to Project</a>
     </div>
     </div>
 
