--- a/index.html
+++ b/index.html
@@ -1704,7 +1704,7 @@
 						  <div class="form-group">
 						   <textarea class="form-control" id="msg" rows="5" placeholder="Your Message" required></textarea>
 							</div>
-						  <button class="Cbtn text-light float-left" id="checkBtn" type="submit">Submit</button>
+						  <button class="Cbtn text-dark float-left" id="checkBtn" type="submit">Submit</button>
 						  <br>
 						  <div id="msgSubmit" class="h3 text-left hidden"></div>
 						  <br><br>
