Changed cards of oppurtuniy_section and blogs(issue #410)

--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
 
 		<br>
 		<br>
-		<button class="btn btn-common opportunity_btn"><a href="./opportunity.html">View All</a>
+		<button class="btn btn-common opportunity_btn"><a href="./opportunity.html">View All opportunities 
 		</button>
 	</section>
 
@@ -1226,9 +1226,11 @@
 				<a href="https://simpleprogrammer.com/myths-about-software-programming/" target="_blank" class="read_btn">Go to blog</a>
 			</div>
 		</div>
+		
 	</div>
-	<button class="btn btn-common opportunity_btn opportunity_btn_t"><a href="./blog.html">View All</a>
+	<button class=" view-btn btn btn-common opportunity_btn opportunity_btn_t"><a href="./blog.html">View All</a>
 	</button>
+	
 	<br><br>
 	<!-- Blog Section End-->
 
