css error:FAQ.css fixed

--- a/blog.html
+++ b/blog.html
@@ -343,7 +343,7 @@
         </div>
 
         <div class="description">
-          Astrology, an ancient craft first recorded to be practised by the Babylonians, is making a comeback lately.
+          Astrology, an ancient craft first recorded to be practiced by the Babylonians, is making a comeback lately.
           More young people are turning to the New Age spirituality found in astrological customs. 
         </div>
 
