fixing style form contact us

--- a/index.html
+++ b/index.html
@@ -1687,8 +1687,8 @@
 					  <h2 class="text-dark wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
 					  <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 				  </div>
-			  <div class="row">
-				  <div class="col-md-6">
+			  <div class="container">
+				  <div class="col-md-12">
 					  <form class="mt-5" id="contactForm">
 						  <div class="form-row">
 							  <div class="form-group col-md-6 ">
@@ -1704,7 +1704,7 @@
 						  <div class="form-group">
 						   <textarea class="form-control" id="msg" rows="5" placeholder="Your Message" required></textarea>
 							</div>
-						  <button class="Cbtn text-light float-left" id="checkBtn" type="submit">Submit</button>
+						  <button class="btn btn-common float-left" id="checkBtn" type="submit">Submit</button>
 						  <br>
 						  <div id="msgSubmit" class="h3 text-left hidden"></div>
 						  <br><br>
