fixing style form contact us

--- a/index.html
+++ b/index.html
@@ -1688,7 +1688,9 @@
 					  <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 				  </div>
 			  <div class="container">
-				  <div class="col-md-12">
+				<div class="row">
+				<div class="col-md-6 text-center">
+					<div class="content">
 					  <form class="mt-5" id="contactForm">
 						  <div class="form-row">
 							  <div class="form-group col-md-6 ">
@@ -1709,12 +1711,16 @@
 						  <div id="msgSubmit" class="h3 text-left hidden"></div>
 						  <br><br>
 						</form>
-						</div>
+					</div>
+				</div>
 				  <div class="col-md-6 text-center">
-					  <img class="image-fluid bg-cont" src="/assets/img/Call_center-cuate.png">
+					<div class="content">
+					  <img class="img-fluid mt-5" src="./assets/img/Call_center-cuate.png">
 				  </div>
+				</div>
 			  </div>
 		  </div>
+		</div>
 	</section>
 	<!-- Contact Section End -->
 	<!-- Contributors section -->
