fixing style form contact us

--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -126,18 +126,16 @@
   <br><br>
 
   <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-8">
       <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">HacktoberFest 2022</h2><br>
-        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Projects</h2>
+        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">HacktoberFest 2022 Projects</h2>
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       </div>
     </div>
-    <div class="col-md-1"></div>
 
+    <!-- <div class="col-md-1"></div> -->
     <div class="col-md-3">
-      <div style="float: left;margin-right: 5%;" class="searchbar_div">
+      <div class="searchbar_div">
         <input style="border-radius: 3rem; padding: 10px;border-color: grey;width: 130%;" id="searchbar"
           onkeyup="search_blog()" type="text" name="search" placeholder='Search projects.....' />
       </div>
