--- a/index.html
+++ b/index.html
@@ -1974,7 +1974,7 @@
 	<!------------------------SCROLL TO TOP - Made by ANIKET SINHA - HACKTOBER FEST 2022------------------------>
 	
 	<button type="button" class="btn btn-warning btn-xs" id="btn-back-to-top">
-  		<i class="fas fa-arrow-circle-up"> T O P</i>
+  		<i class="fas fa-arrow-circle-up"></i>
 	</button>
 
 	<style>
