NavBar UI improved
Closes #447
1> Improved UI of NavBar
2> FIxed hacktoberfest button in Mobile view

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#events">
+							<a class="nav-link"  href="#events">
 								Events
 							</a>
 						</li>
 						
 						<li class="nav-item">
-							<a class="nav-link" href="#opportunity">
+							<a class="nav-link"  href="#opportunity">
 								Opportunity
 							</a>
 						</li>
@@ -113,7 +113,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#testimonial1">
+							<a class="nav-link"  href="#testimonial1">
 								Testimonials
 							</a>
 						</li>
@@ -128,7 +128,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="#joinus" style="background-color:none ;">
+							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="#jj" style="background-color:none ;">
 								Join Us
 							</a>
 						</li>
@@ -1386,6 +1386,7 @@
 	  </section>
 
 	<!-- join us start -->
+	<div id="jj"></div>
 	<section id="joinus" class="section-padding">
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
 			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Our Team</h2>
