Responsive footer and navbar

--- a/index.html
+++ b/index.html
@@ -1770,7 +1770,7 @@
 		<div class="container">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12 flex-grow-1 mw-100">
 						<div class="widget">
 							<h3 class="footer-logo">CodeIN Community</h3>
 							<div class="textwidget">
