--- a/blog.html
+++ b/blog.html
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#opportunity">
+              <a class="nav-link mr-5" href="/#opportunity">
                 Opportunity
               </a>
             </li>
