Featuring the Youtube videos

--- a/index.html
+++ b/index.html
@@ -1740,6 +1740,10 @@
 		  </div>
 	</section>
 	<!-- Contact Section End -->
+
+	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-4534ddff-7800-4e7b-b95f-537acedbed1e"></div>
+
 	<!-- Contributors section -->
 	<section class="contributors-holder">
 		<h3>Shout-Out to our Contributors</h3>
@@ -1763,7 +1767,7 @@
 		})();
 	</script>
 	<!--End of Tawk.to Script-->
-
+	
 
 	<!-- Footer Section Start -->
 	<footer id="footer" class="footer-area section-padding">
