Revert "Added section to feature Youtube Videos."

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	
-	
+	<!------------------------SCROLL TO TOP - Made by ANIKET SINHA - HACKTOBER FEST 2022------------------------>
+
 	<!-- Font Awesome -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
 	rel="stylesheet"/>
@@ -1739,10 +1740,6 @@
 		  </div>
 	</section>
 	<!-- Contact Section End -->
-
-	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-    <div class="elfsight-app-4534ddff-7800-4e7b-b95f-537acedbed1e"></div>
-
 	<!-- Contributors section -->
 	<section class="contributors-holder">
 		<h3>Shout-Out to our Contributors</h3>
@@ -1766,7 +1763,7 @@
 		})();
 	</script>
 	<!--End of Tawk.to Script-->
-	
+
 
 	<!-- Footer Section Start -->
 	<footer id="footer" class="footer-area section-padding">
