Contact Us form UI modified

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
 	rel="stylesheet"/>
 
-	<!-- MDB -->
-	<script	type="text/javascript" 	src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js" ></script>
-	
-	
 	
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -76,8 +72,8 @@
 
 	<!-- counter imports -->
 	<script src="assets/js/jquery-min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-	<script src="https://bfintal.github.io/Counter-Up/jquery.counterup.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
 	<!-- counter imports end-->
 	<!-- animate on scroll import -->
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -1702,42 +1698,60 @@
 	</section>	
 
 	<!-- FAQs section ends	 -->
-
 	<!-- Contact Section Start -->
-	<section id="contact" class="section-padding bg-gray contactSection" data-aos="fade-up" data-aos-duration="1500">
-		<div class="text-center Contactsec">
-			<div class="section-header Contactsec text-center">
-					  <h2 class="text-dark wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
-					  <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-				  </div>
-			  <div class="row">
-				  <div class="col-md-6">
-					  <form class="mt-5" id="contactForm">
-						  <div class="form-row">
-							  <div class="form-group col-md-6 ">
-								<input type="text" class="form-control" id="inputName"  placeholder="Name">
-							  </div>
-							  <div class="form-group col-md-6 ">
-							  <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-							  </div>
-							</div>
-						  <div class="form-group ">
-							<input type="text" class="form-control" id="subj" placeholder="Subject" required>
-						  </div>
-						  <div class="form-group">
-						   <textarea class="form-control" id="msg" rows="5" placeholder="Your Message" required></textarea>
-							</div>
-						  <button class="Cbtn text-dark float-left" id="checkBtn" type="submit">Submit</button>
-						  <br>
-						  <div id="msgSubmit" class="h3 text-left hidden"></div>
-						  <br><br>
-						</form>
-						</div>
-				  <div class="col-md-6 text-center">
-					  <img class="image-fluid bg-cont" src="/assets/img/Call_center-cuate.png">
-				  </div>
-			  </div>
-		  </div>
+	<section id="contact" class="section-padding bg-gray">
+		<div class="container" data-aos="fade-up" data-aos-duration="1500">
+		<div class="section-header text-center">
+			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
+			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+		</div>
+		<div class="row contact-form-area wow fadeInUp" data-wow-delay="0.3s">
+			<div class="col-lg-7 col-md-12 col-sm-12">
+			<div class="contact-block">
+				<form id="contactForm">
+				<div class="row">
+					<div class="col-md-6">
+					<div class="form-group">
+						<input type="text" class="form-control" id="name" name="name" placeholder="Name" required
+						data-error="Please enter your name">
+						<div class="help-block with-errors"></div>
+					</div>
+					</div>
+					<div class="col-md-6">
+					<div class="form-group">
+						<input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Email" id="email"
+						class="form-control" name="email" required data-error="Please enter your email">
+						<div class="help-block with-errors"></div>
+					</div>
+					</div>
+					<div class="col-md-12">
+					<div class="form-group">
+						<input type="text" placeholder="Subject" id="msg_subject" class="form-control" name="subject"
+						required data-error="Please enter your subject">
+						<div class="help-block with-errors"></div>
+					</div>
+					</div>
+					<div class="col-md-12">
+					<div class="form-group">
+						<textarea class="form-control" id="message" placeholder="Your Message" name="message" rows="7"
+						data-error="Write your message" required></textarea>
+						<div class="help-block with-errors"></div>
+					</div>
+					<div class="submit-button text-left">
+						<button class="btn btn-common" id="form-submit" type="submit">Send Message</button>
+						<div id="msgSubmit" class="h3 text-center hidden"></div>
+						<div class="clearfix"></div>
+					</div>
+					</div>
+				</div>
+				</form>
+			</div>
+			</div>
+			<div class="col-lg-5 col-md-12 col-xs-12">
+			<img class="contact-img" src="./assets/img/contact.png" alt="">
+			</div>
+		</div>
+		</div>
 	</section>
 	<!-- Contact Section End -->
 	<!-- Contributors section -->
