fixing the join us button issue

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="#joinus" style="background-color:none ;">
+							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="https://codeincommunity.tech/" style="background-color:none ;">
 								Join Us
 							</a>
 						</li>
