Fixed broken contact section illustration link and added a new git
illustration image, fixed contact section form alignment and button

--- a/index.html
+++ b/index.html
@@ -1690,9 +1690,9 @@
 					  <h2 class="text-dark wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
 					  <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 				  </div>
-			  <div class="row">
-				  <div class="col-md-6">
-					  <form class="mt-5" id="contactForm">
+			  <div class="row pl-5">
+				  <div class="col-md-6 pl-5" >
+					  <form class="mt-5 ml-5 pl-5" id="contactForm">
 						  <div class="form-row">
 							  <div class="form-group col-md-6 ">
 								<input type="text" class="form-control" id="inputName"  placeholder="Name">
@@ -1707,14 +1707,14 @@
 						  <div class="form-group">
 						   <textarea class="form-control" id="msg" rows="5" placeholder="Your Message" required></textarea>
 							</div>
-						  <button class="Cbtn text-light float-left" id="checkBtn" type="submit">Submit</button>
+						  <button class="Cbtn  float-left btn btn-common " id="checkBtn" type="submit">Submit</button>
 						  <br>
 						  <div id="msgSubmit" class="h3 text-left hidden"></div>
 						  <br><br>
 						</form>
 						</div>
 				  <div class="col-md-6 text-center">
-					  <img class="image-fluid bg-cont" src="/assets/img/pngtree-contact-us-flat-design-style-png-image_2766546-removebg-preview.png">
+					  <img class="image-fluid bg-cont" src="./assets/img/contact/contactus-illustration.gif" alt="Contact us secton illustartion">
 				  </div>
 			  </div>
 		  </div>
