--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	
-	<!------------------------SCROLL TO TOP - Made by ANIKET SINHA - HACKTOBER FEST 2022------------------------>
+	
 
 	<!-- Font Awesome -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -148,7 +148,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="https://codeincommunity.tech/" style="background-color:none ;">
+							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="https://codeincommunity.tech/#joinus" style="background-color:none ;">
 								Join Us
 							</a>
 						</li>
