--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
                 Events
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mr-5">
               <a class="nav-link" href="/#opportunity">
                 Opportunity
               </a>
