--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="https://codeincommunity.tech/#joinus" style="background-color:none ;">
+							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="#services" style="background-color:none ;">
 								Join Us
 							</a>
 						</li>
@@ -1770,7 +1770,7 @@
 		<div class="container">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 						<div class="widget">
 							<h3 class="footer-logo">CodeIN Community</h3>
 							<div class="textwidget">
