fixed join us button scrolling

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="https://codeincommunity.tech/#joinus" style="background-color:none ;">
+							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="https://codeincommunity.tech/#joinushere" style="background-color:none ;">
 								Join Us
 							</a>
 						</li>
@@ -1409,7 +1409,7 @@
 	  </section>
 
 	<!-- join us start -->
-	<section id="joinus" class="section-padding">
+	<section id="joinushere" class="section-padding">
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
 			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Our Team</h2>
 			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
