Add meta OpenGraph and Twitter meta tags

--- a/index.html
+++ b/index.html
@@ -21,18 +21,29 @@
 	<script	type="text/javascript" 	src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js" ></script>
 	
 	
+	<title>CodeIN Community </title>
 	
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="title" content="CodeIN Community">
-        <meta name="description" content="CodeIN Community is the Community of Coding Enthusiasts Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities, and various upcoming opportunities to learn different technologies.">
-        <meta name="keywords" content="CodeIN Community,Hackathons,Technical Events,Open Source,Internship Opportunities  ">
-        <meta name="robots" content="index, follow">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="language" content="English">
+    <meta name="description" content="CodeIN Community is the Community of Coding Enthusiasts Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities, and various upcoming opportunities to learn different technologies.">
+    <meta name="keywords" content="CodeIN Community,Hackathons,Technical Events,Open Source,Internship Opportunities  ">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
 
-	<title>CodeIN Community </title>
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://codeincommunity.tech/">
+	<meta property="og:title" content="CodeIN Community">
+	<meta property="og:description" content="CodeIN Community is the Community of Coding Enthusiasts Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities, and various upcoming opportunities to learn different technologies.">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://codeincommunity.tech/">
+	<meta property="twitter:title" content="CodeIN Community">
+	<meta property="twitter:description" content="CodeIN Community is the Community of Coding Enthusiasts Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities, and various upcoming opportunities to learn different technologies.">
 
 	<!-- index style css  -->
 	<link rel="stylesheet" href="./CSS/index.css">
