More options in navbar in index

--- a/index.html
+++ b/index.html
@@ -153,13 +153,23 @@
 							</a>
 						</li>
 
-
+						<div class="dropdown nav-item">
+							<button class="nav-link btn btn-outline-warning rounded px-3 dropbtn">More Options
+							  <i class="fa fa-caret-down"></i>
+							</button>
+							<div class="dropdown-content">
+									<a id="hacktoberfest" target="_blank" href="./hacktoberfest2022.html">
+										HacktoberFest 2022
+									</a>
+									<a id="hacktoberfest" target="_blank" href="./100daysofcodeWinners.html">
+										100 Days of code WINNERS
+									</a>
+							</div>
+						  </div>
 
 						  
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-warning rounded px-3" id="hacktoberfest" target="_blank" href="./hacktoberfest2022.html">
-								HacktoberFest 2022
-							</a>
+
 						</li>
 					</ul>
 				</div>
