Fixed Join Us Button Not working Issue

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="https://codeincommunity.tech/#joinus" style="background-color:none ;">
+							<a class="nav-link btn btn-outline-warning rounded px-3"  href="https://codeincommunity.tech/#joinus" style="background-color:none ;">
 								Join Us
 							</a>
 						</li>
@@ -2016,6 +2016,11 @@
 		document.documentElement.scrollTop = 0;
 		}
 	</script>
+	<style>
+		.nav-item a:active{
+			color: #ffd100 !important;
+		}
+	</style>
 
 </body>
 </html>
