footer links hover issue and footer mail form updated

--- a/index.html
+++ b/index.html
@@ -1807,7 +1807,7 @@
 					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
 						<h3 class="footer-news">Subscribe to our Newsletter</h3>
 						<p class="text-light mb-2">Subscribe to get latest updates and updates.</p>
-						<div class="mail">
+						<div class="mail d-flex">
 						<input type="email" id="Email" placeholder="enter your email.." />
 						<a type="submit" id="btns" label="submit" placeholder="submit">Submit</a>
 					    </div>
