--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	<title>CodeIN Community </title>
 
-	<!-- index style css  -->
+	<!-- index style ghcss  -->
 	<link rel="stylesheet" href="./CSS/index.css">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
