--- a/blog.html
+++ b/blog.html
@@ -127,7 +127,7 @@
 
     <div class="col-md-3">
 
-      <div style="float: left;margin-right: 6%;">
+      <div style="float: center; margin-right : 26%; margin-left: 5%;">
         <input style="border-radius: 4rem; padding: 15px;border-color: grey;width: 130%;" id="searchbar"
           onkeyup="search_blog()" type="text" name="search" placeholder='Search blogs....' />
 
