--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -169,7 +169,7 @@
         <p> So, here you go! Contribute to the Open Source Website of CodeIN Community 🤩 Excited?</p>
       </div>
     <div class="card__footer text-center">
-        <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank" class="read_btn" data-aos="fade-up">Go to Project</a>
+        <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website"  class="read_btn" data-aos="fade-up">Go to Project</a>
     </div>
     </div>
 
@@ -184,7 +184,7 @@
           section to donate your old books.</p>
       </div>
     <div class="card__footer text-center">
-        <a href="https://github.com/SauravMukherjee44/Aec-Library-Website" target="_blank" class="read_btn" data-aos="fade-up">Go to Project</a>
+        <a href="https://github.com/SauravMukherjee44/Aec-Library-Website"  class="read_btn" data-aos="fade-up">Go to Project</a>
     </div>
     </div>
 
@@ -199,7 +199,7 @@
           good cause !</p>
       </div>
     <div class="card__footer text-center">
-        <a href="https://github.com/IAmTamal/Milan" target="_blank" class="read_btn" data-aos="fade-up">Go to Project</a>
+        <a href="https://github.com/IAmTamal/Milan"  class="read_btn" data-aos="fade-up">Go to Project</a>
     </div>
     </div>
 
