--- a/index.html
+++ b/index.html
@@ -1822,7 +1822,7 @@
 							<div class="modal-dialog modal-dialog-centered" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-								<h5 class="modal-title" id="exampleModalLongTitle">Info</h5>
+								<h5 class="modal-title" id="exampleModalLongTitle"><p class="text-dark" id="subscribeTitle"></p></h5>
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
 								</button>
@@ -1831,7 +1831,7 @@
 									<p class="text-dark" id="suscribeMsg"></p>
 								</div>
 								<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
 								</div>
 							</div>
 							</div>
