--- a/index.html
+++ b/index.html
@@ -1671,7 +1671,7 @@
 
 		<button class="accordionFAQs">How to join organising Team?</button>
 		<div class="panelFAQs">
-  			<p class="panelParaFAQs"><a href="#joinus">CLICK HERE </a> to join our Core Team, Mentor Team and Volunteer Team and Fill out the form.<br><br>
+  			<p class="panelParaFAQs"><a href="#joinus" class="joinus">CLICK HERE </a> to join our Core Team, Mentor Team and Volunteer Team and Fill out the form.<br><br>
 				<b>Perks of joining our community -</b><br>
 			We always believe in rewarding people who are doing great in our community, and helping the students to learn and grow. We provide goodies to the best contributors and LOR based on their performance.</p>
 		</div>
